# Crate-Index

./: .rustfmt.toml  Cargo.toml  README.md  README.tpl
.github/workflows/: CI.yml  coverage.yml
src/: blocking.rs  config.rs  error.rs  git.rs  index.rs  lib.rs  metadata.rs  record.rs  utils.rs  validate.rs
src/blocking/: index.rs
src/blocking/index/: tree.rs
src/index/: config.rs  file.rs  git.rs  index.rs  index_file.rs  tree.rs
src/index/tree/: config.rs  file.rs
