[package]
name = "crate-index"
version = "0.1.0"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"

[badges]
codecov = { repository = "Rust-Bucket/Crate-Index"}

[dependencies]
serde = {version = "1.0.104", features =["derive"] }
url = { version = "2.1.1", features = ["serde"] }
semver = { version = "0.9.0", features = ["serde"] }
serde_json = "1.0.45"
async-std = "1.4.0"
thiserror = "1.0.10"
git2 = "0.11.0"
regex = "1.3.4"
lazy_static = "1.4.0"
futures-util = "0.3.4"
walkdir = "2.3.1"
itertools = "0.8.2"

[dev-dependencies]
test-case = "1.0.0"
tempfile = "3.1.0"
async-std = { version = "1.4.0", features = ["attributes"]}
