[package]
name = "crate-index"
version = "0.3.1"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"
description = "A small library for managing a Cargo crate index"
readme = "README.md"
homepage = "https://github.com/Rust-Bucket/Crate-Index"
documentation = "https://docs.rs/crate-index"
repository = "https://github.com/Rust-Bucket/Crate-Index"
keywords = [
    "crates",
    "index",
    "registry",
    "async",
]
license = "MIT"


[badges]
codecov = { repository = "Rust-Bucket/Crate-Index"}


[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
url = { version = "2.2.0", features = ["serde"] }
semver = { version = "0.11.0", features = ["serde"] }
serde_json = "1.0.59"
async-std = "1.7.0"
thiserror = "1.0.22"
git2 = "0.13.12"
regex = "1.4.2"
lazy_static = "1.4.0"
futures-util = "0.3.7"

[features]
default = ["blocking"]
blocking = []

[dev-dependencies]
test-case = "1.0.0"
tempfile = "3.1.0"
async-std = { version = "1.7.0", features = ["attributes"] }
