[package]
name = "crate-index"
version = "0.3.1"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"
description = "A small library for managing a Cargo crate index"
readme = "README.md"
homepage = "https://github.com/Rust-Bucket/Crate-Index"
documentation = "https://docs.rs/crate-index"
repository = "https://github.com/Rust-Bucket/Crate-Index"
keywords = [
    "crates",
    "index",
    "registry",
    "async",
]
license = "MIT"


[badges]
codecov = { repository = "Rust-Bucket/Crate-Index"}


[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
semver = { version = "1.0.4", features = ["serde"] }
serde_json = "1.0.68"
async-std = "1.10.0"
thiserror = "1.0.29"
git2 = "0.13.22"
regex = "1.5.4"
lazy_static = "1.4.0"
futures-util = "0.3.17"

[features]
default = ["blocking"]
blocking = []

[dev-dependencies]
test-case = "3.1.0"
tempfile = "3.2.0"
async-std = { version = "1.10.0", features = ["attributes"] }
